text-align center fix for captions

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -118,7 +118,11 @@ h1 a:hover {
 	max-width: 100%;
 }
 
+figcaption {
 
+	color: #fff;
+	text-align: center; 
+}
 
 /*  ---------END IMAGE -SPOUSE PROGRAM PAGE EDITS ----- */
 
